--- a/final_report/data_analyses/tables/tab_lmer.html
+++ b/final_report/data_analyses/tables/tab_lmer.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="dczksjpsfp" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#dczksjpsfp table {
+<div id="fvyjisijjb" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#fvyjisijjb table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#dczksjpsfp thead, #dczksjpsfp tbody, #dczksjpsfp tfoot, #dczksjpsfp tr, #dczksjpsfp td, #dczksjpsfp th {
+#fvyjisijjb thead, #fvyjisijjb tbody, #fvyjisijjb tfoot, #fvyjisijjb tr, #fvyjisijjb td, #fvyjisijjb th {
   border-style: none;
 }
 
-#dczksjpsfp p {
+#fvyjisijjb p {
   margin: 0;
   padding: 0;
 }
 
-#dczksjpsfp .gt_table {
+#fvyjisijjb .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_caption {
+#fvyjisijjb .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#dczksjpsfp .gt_title {
+#fvyjisijjb .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#dczksjpsfp .gt_subtitle {
+#fvyjisijjb .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#dczksjpsfp .gt_heading {
+#fvyjisijjb .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_bottom_border {
+#fvyjisijjb .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_col_headings {
+#fvyjisijjb .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_col_heading {
+#fvyjisijjb .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#dczksjpsfp .gt_column_spanner_outer {
+#fvyjisijjb .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#dczksjpsfp .gt_column_spanner_outer:first-child {
+#fvyjisijjb .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#dczksjpsfp .gt_column_spanner_outer:last-child {
+#fvyjisijjb .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#dczksjpsfp .gt_column_spanner {
+#fvyjisijjb .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#dczksjpsfp .gt_spanner_row {
+#fvyjisijjb .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#dczksjpsfp .gt_group_heading {
+#fvyjisijjb .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#dczksjpsfp .gt_empty_group_heading {
+#fvyjisijjb .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#dczksjpsfp .gt_from_md > :first-child {
+#fvyjisijjb .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#dczksjpsfp .gt_from_md > :last-child {
+#fvyjisijjb .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#dczksjpsfp .gt_row {
+#fvyjisijjb .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#dczksjpsfp .gt_stub {
+#fvyjisijjb .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#dczksjpsfp .gt_stub_row_group {
+#fvyjisijjb .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#dczksjpsfp .gt_row_group_first td {
+#fvyjisijjb .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#dczksjpsfp .gt_row_group_first th {
+#fvyjisijjb .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#dczksjpsfp .gt_summary_row {
+#fvyjisijjb .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#dczksjpsfp .gt_first_summary_row {
+#fvyjisijjb .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_first_summary_row.thick {
+#fvyjisijjb .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#dczksjpsfp .gt_last_summary_row {
+#fvyjisijjb .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_grand_summary_row {
+#fvyjisijjb .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#dczksjpsfp .gt_first_grand_summary_row {
+#fvyjisijjb .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_last_grand_summary_row_top {
+#fvyjisijjb .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_striped {
+#fvyjisijjb .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#dczksjpsfp .gt_table_body {
+#fvyjisijjb .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_footnotes {
+#fvyjisijjb .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_footnote {
+#fvyjisijjb .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#dczksjpsfp .gt_sourcenotes {
+#fvyjisijjb .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dczksjpsfp .gt_sourcenote {
+#fvyjisijjb .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,63 +387,63 @@
   padding-right: 5px;
 }
 
-#dczksjpsfp .gt_left {
+#fvyjisijjb .gt_left {
   text-align: left;
 }
 
-#dczksjpsfp .gt_center {
+#fvyjisijjb .gt_center {
   text-align: center;
 }
 
-#dczksjpsfp .gt_right {
+#fvyjisijjb .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#dczksjpsfp .gt_font_normal {
+#fvyjisijjb .gt_font_normal {
   font-weight: normal;
 }
 
-#dczksjpsfp .gt_font_bold {
+#fvyjisijjb .gt_font_bold {
   font-weight: bold;
 }
 
-#dczksjpsfp .gt_font_italic {
+#fvyjisijjb .gt_font_italic {
   font-style: italic;
 }
 
-#dczksjpsfp .gt_super {
+#fvyjisijjb .gt_super {
   font-size: 65%;
 }
 
-#dczksjpsfp .gt_footnote_marks {
+#fvyjisijjb .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#dczksjpsfp .gt_asterisk {
+#fvyjisijjb .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#dczksjpsfp .gt_indent_1 {
+#fvyjisijjb .gt_indent_1 {
   text-indent: 5px;
 }
 
-#dczksjpsfp .gt_indent_2 {
+#fvyjisijjb .gt_indent_2 {
   text-indent: 10px;
 }
 
-#dczksjpsfp .gt_indent_3 {
+#fvyjisijjb .gt_indent_3 {
   text-indent: 15px;
 }
 
-#dczksjpsfp .gt_indent_4 {
+#fvyjisijjb .gt_indent_4 {
   text-indent: 20px;
 }
 
-#dczksjpsfp .gt_indent_5 {
+#fvyjisijjb .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -483,85 +483,85 @@
 <td headers="Statistic" class="gt_row gt_right">21.26</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">148</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundApathic Acid</td>
+    <tr><td headers="Term" class="gt_row gt_left">Apathic Acid : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.11</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−17.72</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundBeerse Brew</td>
+    <tr><td headers="Term" class="gt_row gt_left">Beerse Brew : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.08</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−12.76</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3634</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundConcentrate of Caducues</td>
+    <tr><td headers="Term" class="gt_row gt_left">Concentrate of Caducues : day</td>
 <td headers="Estimate" class="gt_row gt_right">0.11</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">19.57</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3621</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundDistilled of Discovery</td>
+    <tr><td headers="Term" class="gt_row gt_left">Distilled of Discovery</td>
 <td headers="Estimate" class="gt_row gt_right">−0.07</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−11.37</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundEssence of Epiphanea</td>
+    <tr><td headers="Term" class="gt_row gt_left">Essence of Epiphanea : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.07</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−11.43</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundFour in December</td>
+    <tr><td headers="Term" class="gt_row gt_left">Four in December : day</td>
 <td headers="Estimate" class="gt_row gt_right">0.07</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">11.29</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3621</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundGranule of Geheref</td>
+    <tr><td headers="Term" class="gt_row gt_left">Granule of Geheref : day</td>
 <td headers="Estimate" class="gt_row gt_right">0.11</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">19.02</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundKar-Hamel Mooh</td>
+    <tr><td headers="Term" class="gt_row gt_left">Kar-Hamel Mooh : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.02</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−3.79</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundLucifer’s Liquid</td>
+    <tr><td headers="Term" class="gt_row gt_left">Lucifer’s Liquid : day</td>
 <td headers="Estimate" class="gt_row gt_right">0.15</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">26.41</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3621</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundNoospherol</td>
+    <tr><td headers="Term" class="gt_row gt_left">Noospherol : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.05</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−8.35</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundOil of John’s Son</td>
+    <tr><td headers="Term" class="gt_row gt_left">Oil of John’s Son : day</td>
 <td headers="Estimate" class="gt_row gt_right">0.08</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">12.66</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundPowder of Perlimpinpin</td>
+    <tr><td headers="Term" class="gt_row gt_left">Powder of Perlimpinpin : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.03</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−4.98</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3621</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundSpirit of Scienza</td>
+    <tr><td headers="Term" class="gt_row gt_left">Spirit of Scienza : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.04</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−7.25</td>
 <td headers="Degrees of Freedom" class="gt_row gt_right">3633</td>
 <td headers="p-value" class="gt_row gt_left">&lt;.001</td></tr>
-    <tr><td headers="Term" class="gt_row gt_left">Day:CompoundZest of Zen</td>
+    <tr><td headers="Term" class="gt_row gt_left">Zest of Zen : day</td>
 <td headers="Estimate" class="gt_row gt_right">−0.06</td>
 <td headers="Standard Error" class="gt_row gt_right">0.01</td>
 <td headers="Statistic" class="gt_row gt_right">−10.83</td>
